# ext-uv

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  config.m4  version.in.h
.github/: sanitizers.yml
.github/actions/compile-extension/: action.yml
.github/actions/install-libuv/: action.yml
.github/actions/install-php/: action.yml
.github/workflows/: ci.yml  sanitizers.yml
.run/: All Tests.run.xml  Run PHP With Libuv.run.xml
cmake/: Clean.cmake  FindLibuv.cmake  FindPHP.cmake
include/: php_uv.h
scripts/: compile-libuv.sh  compile-php.sh
src/: php_uv.c  uv.stub.php  uv_arginfo.h
tests/: CMakeLists.txt
